2009-03-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	parallel-tests: Fix summary output.
	* lib/am/check.am (am__text_box): Fix unportable sed script,
	replacing `\n' in the right hand side of an `s' command with
	a literal newline.  Kudos to Bruno Haible for the newline idea.
	* tests/parallel-tests.test: Update test to expose this.

2009-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Overhaul of tests/README.
	* tests/README: General overhaul.  Mention parallel test suite
	execution, the test-suite.log file; document `Exit' vs. `exit',
	`defs' vs. `defs-p', the naming of `parallel-tests' tests.
	* README: Simplify, point to tests/README.

	Documentation for the parallel-tests driver.
	* doc/automake.texi (Tests, Options): Document the `parallel-tests'
	option, including new features of the test driver.
	* NEWS: Update.

	New tests for `parallel-tests'.
	* tests/parallel-tests.test: New file, to expose a bunch of
	features of `parallel-tests': VERBOSE, clean, TEST_SUITE_LOG,
	test dependencies, DISABLE_HARD_ERRORS.
	* tests/parallel-tests2.test: New file, test check-html.
	* tests/parallel-tests3.test: New file, test concurrency.
	* tests/parallel-tests4.test: New file, test suffix rules.
	* tests/parallel-tests5.test: New file, demonstrate compile/test
	concurrency.
	* tests/defs.in: Add a `required' check for rst2html.
	* tests/Makefile.am: Update.

	parallel-tests: Ensure backward-compatible semantics.
	For each test in Automake's test suite that uses TESTS, generate
	an identical one that uses the `parallel-tests' option, for
	coverage of backward-compatible functionality.
	* tests/gen-parallel-tests: New file, generates distributed
	Makefile.am snippet tests/parallel-tests.am to list all tests
	that use the TESTS interface but not yet the `parallel-tests'
	option, with names mangled to use suffix `-p.test', in ...
	(parallel_tests): ... this new make macro.
	* tests/Makefile.am ($(srcdir)/parallel-tests.am)
	($(parallel_tests), defs-p): New rules.