@@ -39,7 +39,8 @@ $AUTOCONF
 $AUTOMAKE --add-missing
 ./configure
 
-$MAKE -j >stdout || { cat stdout; Exit 1; }
+: >stdout
+$MAKE -j >>stdout || { cat stdout; Exit 1; }
 
 cat stdout
 test 1 -eq `grep 'Warnings can be ignored' stdout | wc -l`
@@ -51,7 +52,8 @@ test -f elc-stamp
 
 rm -f am-*.elc
 
-$MAKE -j >stdout
+: >stdout
+$MAKE -j >>stdout
 
 cat stdout
 test 1 -eq `grep 'Warnings can be ignored' stdout | wc -l`
