@@ -61,7 +61,10 @@ cd serial
 $MAKE -j1 check &
 cd ../parallel
 $sleep
-$MAKE -j4 check > stdout
+# Use append mode here to avoid dropping output.
+# Yes, this actually happens.
+: >stdout
+$MAKE -j4 check >> stdout
 cd ..
 kill $!
 cat parallel/stdout
