@@ -1,5 +1,10 @@
 2009-03-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Use append mode to capture parallel test output.
+	* tests/lisp8.test: Use append mode for output from `make -j',
+	to avoid dropped lines.
+	* tests/parallel-tests3.test: Likewise.
+
 	parallel-tests: Fix summary output.
 	* lib/am/check.am (am__text_box): Fix unportable sed script,
 	replacing `\n' in the right hand side of an `s' command with
